fix: explicit /notex/ paths for manifest and sw registration

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <script src="script.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js').catch(console.error);
+            navigator.serviceWorker.register('/notex/sw.js').catch(console.error);
         }
     </script>
 </body>
