feat: implement fflate for aggressive URL compression

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="prism-tomorrow.min.css">
     <!-- All dependencies local — works offline -->
     <script src="markdown-it.min.js"></script>
-    <script src="lz-string.min.js"></script>
+    <script src="fflate.min.js"></script>
     <script src="prism.min.js"></script>
     <script src="prism-markdown.min.js"></script>
 </head>
